(fix): hide overflow of body

--- a/src/style/base.scss
+++ b/src/style/base.scss
@@ -10,6 +10,7 @@ body {
   font-family: 'Montserrat', Arial, Helvetica, sans-serif;
   line-height: 1.5;
   color: $color-black;
+  overflow-x: hidden;
 }
 
 #app {
